--- a/application/views/scripts/model/edit.phtml
+++ b/application/views/scripts/model/edit.phtml
@@ -7,7 +7,7 @@ $this->title = $this->model->getName();
 <form action="" method="post">
 
     <?php if ($this->model->names): ?>
-        <h3>Display Name</h3>
+        <h4>Display Name</h4>
         <?php foreach ($this->model->names as $alias): ?>
         <div>
             <input type="radio" name="modelName" value="<?php echo $alias->ID; ?>" id="modelName_<?php echo $alias->ID; ?>" <?php echo $this->model->getName() == $alias->name ? ' checked="checked"' : ''; ?>>
@@ -17,6 +17,9 @@ $this->title = $this->model->getName();
     <?php endif; ?>
 
     <?php // New Alias ?>
+
+    <h4>Photosets Updated</h4>
+    <div><?php echo $this->model->photosetsChecked;?></div>
 
     <?php // Last Google search date ?>
 
