--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,7 +1,7 @@
     <ul id="menu" class="clearfix">
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null));?>">Add a new model</a></li>
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking')); ?>">Ranking</a></li>
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats')); ?>">Stats</a></li>
+        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null), null, true);?>">Add a new model</a></li>
+        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>">Ranking</a></li>
+        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats'), null, true); ?>">Stats</a></li>
     </ul>
 
     <div id="filter" class="clearfix">
