--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,30 +1,34 @@
-    <ul id="menu" class="clearfix">
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null), null, true);?>">Add a new model</a></li>
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>">Ranking</a></li>
-        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats'), null, true); ?>">Stats</a></li>
-    </ul>
+<ul id="menu" class="clearfix">
+    <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null), null, true);?>">Add a new model</a></li>
+    <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>">Ranking</a></li>
+    <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats'), null, true); ?>">Stats</a></li>
+</ul>
 
-    <div id="filter" class="clearfix">
-        <a href="<?php echo $this->url(array('order' => 'ranking'));?>">Ranking</a>
-        <a href="<?php echo $this->url(array('order' => 'name'));?>">Name</a>
-        <form action="<?php echo $this->url(array('controller' => 'index', 'action' => 'search'),null,true); ?>" method="post" id="search">
-            <input type="text" name="keyword" value="<?php echo $this->keyword; ?>" />
-            <button type="submit">Search</button>
-        </form>
-    </div>
+<div id="filter" class="clearfix">
+    <a href="<?php echo $this->url(array('order' => 'ranking'));?>">Ranking</a>
+    <a href="<?php echo $this->url(array('order' => 'name'));?>">Name</a>
+    <form action="<?php echo $this->url(array('controller' => 'index', 'action' => 'search'),null,true); ?>" method="post" id="search">
+        <input type="text" name="keyword" value="<?php echo $this->keyword; ?>" />
+        <button type="submit">Search</button>
+    </form>
+</div>
 
+<?php if ($this->models->toArray()): ?>
     <ul id="photosets" class="clearfix">
-<?php foreach($this->models as $model): ?>
-        <li>
-            <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'view', 'id'=>$model->ID, 'page' => null, 'search' => null, 'order' => null)); ?>">
-                <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($model->getLatestPhotoset()->thumbnail), 'page' => null)); ?>" />
-                <div class="name">
-                    <?php echo $model->getName() ;?>
-                    (<?php echo $this->escape($model->ranking)?>)
-                </div>
-            </a>
-        </li>
-<?php endforeach; ?>
-    </ul>
+    <?php foreach($this->models as $model): ?>
+            <li>
+                <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'view', 'id'=>$model->ID, 'page' => null, 'search' => null, 'order' => null)); ?>">
+                    <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($model->getLatestPhotoset()->thumbnail), 'page' => null)); ?>" />
+                    <div class="name">
+                        <?php echo $model->getName() ;?>
+                        (<?php echo $this->escape($model->ranking)?>)
+                    </div>
+                </a>
+            </li>
+    <?php endforeach; ?>
+        </ul>
+<?php else: ?>
+    <p>No Results</p>
+<?php endif; ?>
 
 <?php echo $this->partial('pagination.phtml', array('paginator' => $this->paginator))?>
