--- a/public/css/site.css
+++ b/public/css/site.css
@@ -139,7 +139,7 @@ ul#ranking li div.image {
     background: black;
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 810px) {
     /* iPhone, Android rules here */
     body {
         background: black;
