Lots of Resource Scraping.

--- a/application/views/scripts/model/edit.phtml
+++ b/application/views/scripts/model/edit.phtml
@@ -27,6 +27,9 @@ $this->title = $this->model->getName();
 
     <?php // WebLink Stats for this model ?>
 
+    <h4>WebUrls</h4>
+    <div><a href="<?php echo $this->url(array('action' => 'web-url'));?>">See WebUrls</a></div>
+
     <p><input type="submit" value="Update" /></p>
 
 </form>
