--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -41,7 +41,7 @@
             <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
              -->
             <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
-            <input type="submit" value="Rate!" />
+            <button type="submit">God Like!</button>
         </form>
 
         <?php //var_dump($model->getWebLinkStats()->toArray() ); ?>
