Updated the Web url to take resource and model as filters.

--- a/application/views/scripts/model/edit.phtml
+++ b/application/views/scripts/model/edit.phtml
@@ -28,7 +28,7 @@ $this->title = $this->model->getName();
     <?php // WebLink Stats for this model ?>
 
     <h4>WebUrls</h4>
-    <div><a href="<?php echo $this->url(array('action' => 'web-url'));?>">See WebUrls</a></div>
+    <div><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'modelid' => $this->model->ID));?>">See WebUrls</a></div>
 
     <p><input type="submit" value="Update" /></p>
 
