--- a/application/views/scripts/web-resource/index.phtml
+++ b/application/views/scripts/web-resource/index.phtml
@@ -14,7 +14,7 @@
             <td><a href="<?php echo $this->url(array('action' => 'test', 'id' => $webResource->id)); ?>"><?php echo $webResource->website; ?></a></td>
             <td><?php echo $webResource->frequency; ?></td>
             <td><?php echo $webResource->nextCheck; ?></td>
-            <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'id' => $webResource->id)); ?>">Web Urls</a></td>
+            <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'webresourceid' => $webResource->id)); ?>">Web Urls</a></td>
         </tr>
         <?php endforeach; ?>
     </tbody>
