--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -6,6 +6,7 @@
             <th>url</th>
             <th>status</th>
             <th>action</th>
+            <th>Names</th>
             <th>linked</th>
             <th>date</th>
         </tr>
@@ -17,6 +18,15 @@
             <td><?php echo $url->url; ?></td>
             <td><?php echo $url->httpStatusCode; ?></td>
             <td><?php echo $url->action; ?></td>
+            <td>
+            <?php if ($url->ModelNameWebURL): ?>
+                <ul>
+                <?php foreach ($url->ModelNameWebURL as $modelNameLink): ?>
+                    <li><?php echo $modelNameLink->modelName->name; ?></li>
+                <?php endforeach; ?>
+                </ul>
+            <?php endif; ?>
+            </td>
             <td><?php echo $url->linked; ?></td>
             <td><?php echo $url->dateCreated; ?></td>
         </tr>
@@ -27,7 +37,12 @@
         <tr>
             <td colspan="6">
             <?php foreach($thumbnails as $thumbnail): ?>
-            <img src="<?php echo renderpath($url->url, $thumbnail); // Might need to use CURL ?>" />
+
+            <a href="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>" target="_blank">
+                <img src="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>&width=80" />
+            </a>
+
+
             <?php endforeach; ?>
             </td>
         </tr>
@@ -47,6 +62,10 @@
 
 <?php
 function renderpath ($url, $path) {
+    if (strstr($path, "http")) {
+        return $path;
+    }
+
     return $url.$path;
 
 }
