--- a/application/views/scripts/web-resource/test.phtml
+++ b/application/views/scripts/web-resource/test.phtml
@@ -1,3 +1,11 @@
-<pre><?php var_dump($this->webResource->toArray()); ?></pre>
+<?php echo $this->form; ?>
+
+<p>₣requency: <?php echo $this->webResource->frequency; ?></p>
+<p>Current checksum: <?php echo $this->webResource->checksum; ?></p>
+<p>This Checksum: <?php echo md5(serialize($this->links));?>
+
 <textarea rows="8" cols="120"><?php var_dump($this->html); ?></textarea>
-<pre><?php var_dump($this->links); ?></pre>
+
+<?php foreach ($this->links as $link): ?>
+<?php echo $link['href']; ?><br />
+<?php endforeach; ?>
