--- a/application/views/scripts/model/edit.phtml
+++ b/application/views/scripts/model/edit.phtml
@@ -1,12 +1,12 @@
 <?php
 $this->headTitle('Edit');
 $this->headTitle($this->model->getName());
-$this->title = $this->model->getName();
+$this->title = '<a href="' . $this->url(array('controller' => 'model', 'action' => 'view', 'id' => $this->model->ID), null, true) . '">' . $this->model->getName(). '</a>';
 ?>
 
 <form action="<?php echo $this->url(array('action' => 'edit')); ?>" method="post">
     <input type="checkbox" name="active" value="1" id="active" <?php echo $this->model->isActive() ? ' checked="checked"' : ''; ?> />
-    <label for="active">Active
+    <label for="active">Active</label>
 
     <?php if ($this->model->names): ?>
         <h4>Display Names</h4>
@@ -16,6 +16,10 @@ $this->title = $this->model->getName();
             <label for="modelName_<?php echo $alias->ID; ?>"><?php echo $alias->name; ?></label>
         </div>
         <?php endforeach; ?>
+        <form method="post">
+            <input type="text" name="alias">
+            <input type="submit" name="submit" value="Add Name" />
+        </form>
     <?php endif; ?>
 
     <?php // New Alias ?>
@@ -30,6 +34,6 @@ $this->title = $this->model->getName();
     <h4>WebUrls</h4>
     <div><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'modelid' => $this->model->ID));?>">See WebUrls</a></div>
 
-    <p><input type="submit" value="Update" /></p>
+    <p><input type="submit" name="submit" value="Update" /></p>
 
 </form>
