--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -17,7 +17,16 @@
             <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'test', 'id' => $url->id), 'default', true); ?>"><?php echo $url->id; ?></a></td>
             <td><?php echo $url->url; ?></td>
             <td><?php echo $url->httpStatusCode; ?></td>
-            <td><?php echo $url->action; ?></td>
+            <td>
+                <select>
+                    <option value="" <?php echo $url->action == God_Model_WebURLTable::NEW_URL ? 'selected="selected"' : ''; ?>>New Url</option>
+                    <option value="" <?php echo $url->action == God_Model_WebURLTable::GET_THUMBNAILS ? 'selected="selected"' : ''; ?>>Get Thumbnails</option>
+                    <option value="" <?php echo $url->action == God_Model_WebURLTable::GOT_THUMBNAILS ? 'selected="selected"' : ''; ?>>Got Thumbnails</option>
+                    <option value="" <?php echo $url->action == God_Model_WebURLTable::THUMBNAIL_ISSUE ? 'selected="selected"' : ''; ?>>Thubmnail Issue</option>
+                </select>
+            <?php echo $url->action; ?>
+
+            </td>
             <td>
             <?php if ($url->ModelNameWebURL): ?>
                 <ul>
@@ -28,7 +37,7 @@
             <?php endif; ?>
             </td>
             <td><?php echo $url->linked; ?></td>
-            <td><?php echo $url->dateCreated; ?></td>
+            <td><?php echo $this->date($url->dateCreated, Coda_View_Helper_Date::DATETIME); ?></td>
         </tr>
         <?php
             $thumbnails = unserialize($url->thumbnails);
@@ -37,7 +46,7 @@
         <tr>
             <td colspan="7">
             <?php foreach($thumbnails as $thumbnail): ?>
-            <a href="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>" target="_blank">
+            <a href="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>">
                 <img src="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>&width=80" />
             </a>
             <?php endforeach; ?>
