Web Resources Updates

--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -72,6 +72,11 @@ function renderpath ($url, $path) {
         return $path;
     }
 
+    if (preg_match("~(\/).~", $path)) {
+        $urlParts = parse_url($url);
+        return $urlParts['scheme'].'://'.$urlParts['host'].$path;
+    }
+
     return $url.$path;
 
 }
