--- a/application/views/scripts/web-resource/index.phtml
+++ b/application/views/scripts/web-resource/index.phtml
@@ -3,7 +3,7 @@
     <thead>
         <tr>
             <th>Website</th>
-            <th>Frequency</th>
+        <!--    <th>Frequency</th> -->
             <th>Next Check</th>
             <th>Last Updated</th>
             <th>Web Urls</th>
@@ -13,7 +13,7 @@
         <?php foreach ($this->webResources as $webResource): ?>
         <tr>
             <td><a href="<?php echo $this->url(array('action' => 'test', 'id' => $webResource->id)); ?>"><?php echo $webResource->website; ?></a></td>
-            <td><?php echo $webResource->frequency; ?></td>
+  <!--          <td><?php echo $webResource->frequency; ?></td> -->
             <td><?php echo $this->date($webResource->nextCheck, Coda_View_Helper_Date::DATETIME); ?></td>
             <td><?php echo $this->date($webResource->lastUpdated, Coda_View_Helper_Date::DATETIME); ?></td>
             <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'webresourceid' => $webResource->id)); ?>">Web Urls</a></td>
