--- a/application/views/scripts/web-resource/index.phtml
+++ b/application/views/scripts/web-resource/index.phtml
@@ -16,7 +16,7 @@
   <!--          <td><?php echo $webResource->frequency; ?></td> -->
             <td><?php echo $this->date($webResource->nextCheck, Coda_View_Helper_Date::DATETIME); ?></td>
             <td><?php echo $this->date($webResource->lastUpdated, Coda_View_Helper_Date::DATETIME); ?></td>
-            <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'webresourceid' => $webResource->id)); ?>">Web Urls</a></td>
+            <td><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'index', 'webresourceid' => $webResource->id), 'default' ,true); ?>">Web Urls</a></td>
         </tr>
         <?php endforeach; ?>
     </tbody>
