--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -9,8 +9,12 @@
     <head>
         <?php echo $this->headMeta(); ?>
         <?php echo $this->headTitle(); ?>
-        <?php echo $this->headLink()->prependStylesheet($this->baseUrl().'/css/site.css'); ?>
-
+        <?php echo $this->headLink()
+                ->appendStylesheet('//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+                ->appendStylesheet('//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
+                ->appendStylesheet($this->baseUrl().'/css/site.css'); ?>
+        <?php echo $this->headScript()
+                ->appendFile('//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'); ?>
         <!-- Designed Fro BlackBerry 320px width - 8px scrollbar -->
         <meta name="viewport" content="width=312; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     </head>
