--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,4 +1,15 @@
+<div class="row">
+    <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
+                    
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2>Log in</h2>
+            </div>
+            <div class="panel-body"></div>
 <?php
-$this->title = "Log in";
+//$this->title = "Log in";
 $this->headTitle('Log in');
 echo $this->form; ?>
+        </div>
+    </div>
+</div>
