--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,12 +14,13 @@
                 ->appendStylesheet('//netdna.bootstrapcdn.com/bootswatch/3.1.1/simplex/bootstrap.min.css')
                 ->appendStylesheet($this->baseUrl().'/css/site.css'); ?>
         <?php echo $this->headScript()
+                ->appendFile('//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
                 ->appendFile('//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'); ?>
         <!-- Designed Fro BlackBerry 320px width - 8px scrollbar -->
         <meta name="viewport" content="width=312; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     </head>
     <body>
-        <div id="content">
+        <div class="container">
             <?php echo $this->partial('partials/navigation.phtml'); ?>
             <h2><?php echo $this->title; ?></h2>
             <?php echo $this->layout()->content; ?>
