--- a/public/css/site.css
+++ b/public/css/site.css
@@ -82,11 +82,12 @@ form #submitbutton {
     float: left;
     margin-right: 1em;
 }
-
+/*
 #content {
     max-width: 930px;
     margin: 0 auto;
 }
+*/
 
 #photosets {
     list-style: none;
@@ -158,7 +159,7 @@ ul#ranking li div.image {
         color: rgb(179,179,179);
         font-family: Helvetica;
         font-size:12px;
-        width: 312px;
+        /*width: 312px;*/
     }
     h2 {
         color: rgb(179,179,179);
@@ -213,6 +214,11 @@ ul#ranking li div.image {
         margin: 0 2px 0px 0;
         width: 100px;
         height: 160px;
+    }
+    
+    #photosets li img {
+        width: 100px;
+        /*height: 160px;*/
     }
     
     #photosets li div.image, #photosets li label.image {
