--- a/application/views/scripts/pagination.phtml
+++ b/application/views/scripts/pagination.phtml
@@ -1,33 +1,30 @@
 <?php if ($this->paginator->haveToPaginate()): ?>
-<?php $chunk = 7; ?>
+<?php stristr($_SERVER['HTTP_USER_AGENT'], 'Mobile') ? $chunk = 3 : $chunk = 5; ?>
 <?php $pagerRange = $this->paginator->getRange('Sliding', array('chunk' => $chunk))->rangeAroundPage(); ?>
-<div class="pagination" style="width:100%">
-    <div>
+<div class="text-center">
+<ul class="pagination">
 
-        <?php if ($this->paginator->getFirstPage() != $this->paginator->getPage()): ?>
-            <a href="<?php echo $this->url(array('page' => $this->paginator->getPreviousPage())); ?>">&lt;</a>
-            <?php if ($this->paginator->getPage() > ceil($chunk/2)): ?>
-                <a href="<?php echo $this->url(array('page' => $this->paginator->getFirstPage())); ?>"><?php echo $this->paginator->getFirstPage(); ?>...</a>
-            <?php endif; ?>
+    <?php if ($this->paginator->getFirstPage() != $this->paginator->getPage()): ?>
+    <li><a href="<?php echo $this->url(array('page' => $this->paginator->getPreviousPage())); ?>">&lt;</a></li>
+    <?php if ($this->paginator->getPage() > ceil($chunk/2)): ?>
+    <li><a href="<?php echo $this->url(array('page' => $this->paginator->getFirstPage())); ?>"><?php echo $this->paginator->getFirstPage(); ?>...</a></li>
         <?php endif; ?>
+    <?php endif; ?>
 
-        <?php foreach ($pagerRange as $page): ?>
-            <?php
-            if ($page != $this->paginator->getPage()) {
-                echo '<a href="' . $this->url(array('page' => $page)) . '">' . $page . '</a> ';
-            } else {
-                echo $page.' ';
-            }
-            ?>
-        <?php endforeach; ?>
-
-        <?php if ($this->paginator->getLastPage() != $this->paginator->getPage()): ?>
-            <?php if ($this->paginator->getLastPage() >= ($this->paginator->getPage() + ceil($chunk/2))): ?>
-                <a href="<?php echo $this->url(array('page' => $this->paginator->getLastPage())); ?>">...<?php echo $this->paginator->getLastPage(); ?></a>
-            <?php endif; ?>
-            <a href="<?php echo $this->url(array('page' => $this->paginator->getNextPage())); ?>">&gt;</a>
+    <?php foreach ($pagerRange as $page): ?>
+        <?php if ($page != $this->paginator->getPage()): ?>
+    <li><a href="<?php echo $this->url(array('page' => $page)); ?>"><?php echo $page; ?></a></li>
+        <?php else: ?>
+    <li class="active"><a><?php echo $page; ?></a></li>
         <?php endif; ?>
+    <?php endforeach; ?>
 
-    </div>
-</div>
+    <?php if ($this->paginator->getLastPage() != $this->paginator->getPage()): ?>
+        <?php if ($this->paginator->getLastPage() >= ($this->paginator->getPage() + ceil($chunk/2))): ?>
+    <li><a href="<?php echo $this->url(array('page' => $this->paginator->getLastPage())); ?>">...<?php echo $this->paginator->getLastPage(); ?></a></li>
+        <?php endif; ?>
+    <li><a href="<?php echo $this->url(array('page' => $this->paginator->getNextPage())); ?>">&gt;</a></li>
+    <?php endif; ?>
+
+</ul></div>
 <?php endif; ?>
