--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,3 +1,5 @@
+<?php //echo $this->title ? '<h1>' . $this->title . '</h1>' : ''; ?>
+
 <div id="filter" class="clearfix">
     <a href="<?php echo $this->url(array('order' => 'ranking'));?>">Ranking</a>
     <a href="<?php echo $this->url(array('order' => 'name'));?>">Name</a>
