--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -1,5 +1,6 @@
 <?php
-    $this->headTitle('Ranking');
+    $this->title = 'Ranking';
+    $this->headTitle($this->title);
 ?>
 <ul id="menu" class="clearfix">
     <li><a href="<?php echo $this->url(array('action' => 'ranking'));?>">Try Again</a></li>
