--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,21 +1,5 @@
 @CHARSET "UTF-8";
 
-body,html {
-    margin: 0;
-    font-family: Verdana,sans-serif;
-}
-h1 {
-    font-size: 1.4em;
-    color: #000000;
-    text-align: center;
-    margin: 0 auto 10px auto;
-    width: 40%;
-}
-h2 {
-    font-size: 1.2em;
-    color: #000000;
-    margin: 0 0 10px 0;
-}
 a {
     color: #000000;
 }
@@ -237,11 +221,34 @@ ul#ranking li div.image {
 .container {
     padding-left: 0;
     padding-right: 0;
+    overflow-x: hidden;
+}
+
+.row {
+    margin-left: -5px;
+    margin-right: -5px;
+}
+
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, 
+.col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, 
+.col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, 
+.col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, 
+.col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, 
+.col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, 
+.col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, 
+.col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, 
+.col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, 
+.col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, 
+.col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, 
+.col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .thumbnail {
     border: 0;
-    border-radius: auto;
+    border-radius: 0;
     padding: 0;
 }
 
@@ -263,4 +270,15 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
     background: rgba(100,100,100,0.8);
     width: 100%;
     text-align: center;
+}
+
+/* Search */
+.navbar .input-sm, .navbar .btn-sm {
+    margin: 3px 0;
+}
+
+/* Page Title */
+.page-header {
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
