--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,4 +1,4 @@
-<?php //echo $this->title ? '<h1>' . $this->title . '</h1>' : ''; ?>
+<?php $this->title = 'Goddesses'; ?>
 
 <div id="filter" class="clearfix">
     <a href="<?php echo $this->url(array('order' => 'ranking'));?>">Ranking</a>
