--- a/application/views/scripts/web-resource/index.phtml
+++ b/application/views/scripts/web-resource/index.phtml
@@ -1,5 +1,5 @@
 <?php if ($this->webResources): ?>
-<table>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Website</th>
