--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -1,5 +1,5 @@
 <?php if ($this->webUrls): ?>
-<table>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>id</th>
@@ -29,7 +29,7 @@
             </td>
             <td>
             <?php if ($url->ModelNameWebURL): ?>
-                <ul>
+                <ul class="list-unstyled">
                 <?php foreach ($url->ModelNameWebURL as $modelNameLink): ?>
                     <li><a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'edit', 'id' => $modelNameLink->modelName->model->ID), 'default', true); ?>"><?php echo $modelNameLink->modelName->model->getName();?></a></li>
                 <?php endforeach; ?>
